[workspace]
members = [
  "apps/plus-desktop",
  "engine",
  "renderer",
  "net",
  "privacy",
  "vpn",
  "adblock",
  "yandex",
  "tests"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Plus Team"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
rusqlite = { version = "0.33", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
aes-gcm-siv = "0.11"
html5ever = "0.29"
markup5ever_rcdom = "0.5"
cssparser = "0.34"
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
parking_lot = "0.12"
http = "1"
