[package]
name = "plus-net"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
rusqlite.workspace = true
chrono.workspace = true
http.workspace = true
