[package]
name = "plus-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
wry.workspace = true
plus-engine = { path = "../engine" }
plus-yandex = { path = "../yandex" }
plus-adblock = { path = "../adblock" }
serde = { workspace = true }
serde_json = { workspace = true }
