[package]
name = "plus-vpn"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
base64.workspace = true
aes-gcm-siv.workspace = true
sha2.workspace = true
rand.workspace = true
keyring.workspace = true
