[package]
name = "plus-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
plus-engine = { path = "../../engine" }
plus-renderer = { path = "../../renderer" }
plus-net = { path = "../../net" }
plus-privacy = { path = "../../privacy" }
plus-vpn = { path = "../../vpn" }
plus-adblock = { path = "../../adblock" }
plus-yandex = { path = "../../yandex" }
serde.workspace = true
