[package]
name = "plus-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.31"
raw-window-handle = "0.6"
tokio.workspace = true
plus-engine = { path = "../../engine" }
plus-renderer = { path = "../../renderer" }
plus-net = { path = "../../net" }
plus-privacy = { path = "../../privacy" }
plus-vpn = { path = "../../vpn" }
plus-adblock = { path = "../../adblock" }
plus-yandex = { path = "../../yandex" }
serde.workspace = true
reqwest.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }
